--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,10 @@ name: 'Your name here'
 description: 'Provide a description here'
 author: 'Your name or organization here'
 inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+  conda-standalone-version:
+    required: false
+    description: 'Version of the Conda standalone executable to install'
+    default: 'latest'
 runs:
   using: 'node12'
   main: 'dist/index.js'
