--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: ./
         with:
           conda-standalone-version: 'latest'
+      - name: Info
         run: |
           chmod +x conda.exe
           ./conda.exe info
