--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,8 +2,8 @@
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": false,
-  "singleQuote": true,
+  "semi": true,
+  "singleQuote": false,
   "trailingComma": "none",
   "bracketSpacing": false,
   "arrowParens": "avoid"
