--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,6 @@ jobs:
           conda-standalone-version: 'latest'
       - name: Info
         run: |
-          which conda
+          env
+          ls
+          ls ./miniconda
