--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,4 @@ jobs:
           conda-standalone-version: 'latest'
       - name: Info
         run: |
-          env
-          ls
-          ls ./miniconda
+          ls -l ./conda.exe
