--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,15 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        conda-version: ['latest', 4.9]
     steps:
       - uses: actions/checkout@v2
       - uses: ./
         with:
           conda-standalone-version: 'latest'
-          conda-version: 'latest'
+          conda-version: ${{ matrix.conda-version }}
       - name: Info
         shell: bash -l {0}
         run: |
+          which conda
           conda info
