--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        conda-version: [4.6, 4.9]
+        conda-version: [4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9]
     steps:
       - uses: actions/checkout@v2
       - uses: ./
