--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
     "@actions/io": "^1.0.2",
-    "@actions/tool-cache": "^1.6.0"
+    "@actions/tool-cache": "^1.6.0",
+    "@types/semver": "^7.3.4",
+    "semver": "^7.3.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
